fix footer spacing

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,7 +2,7 @@
     background-color: #393838;
     padding: 15px 0 15px 0;
 
-    margin-top: 50px;
+    margin-top: 58px;
 
     display: flex;
     flex-direction: column;
